# MMD_AutoLipTool

./: .gitignore  AGENTS.md  LICENSE  MMD_AutoLipTool.code-workspace  MMD_AutoLipTool.ini  MMD_AutoLipTool.spec  NOTICE  README.md  Specification_Prompt_v2.md  Specifications_Prompt_v1.md  THIRD_PARTY_LICENSES.md  Version_Control.md  build.ps1  pyproject.toml  repo_milestone.md  requirements.txt
.cspell/: custom-dictionary-workspace.txt
_old/: Specification_Prompt_v2.md  Specifications_Prompt_v1.md  repo_milestone.md
_tmp_task11_vmd_check/: legacy_fallback.vmd  ms11_2_fallback.vmd  ms11_3_success.vmd
docs/: GUIFIX_Implementation_Plan.md  MS10_Implementation_Plan.md  MS11-10_Implementation_Plan.md  MS11-11_Implementation_Plan.md  MS11-1_Implementation_Plan.md  MS11-2_FIX01_Implementation_Plan.md  MS11-2_FIX02_Implementation_Plan.md  MS11-2_Implementation_Plan.md  MS11-3_Implementation_Plan.md  MS11-5_Implementation_Plan.md  MS11-8_Implementation_Plan.md  MS11-9C_Implementation_Plan.md  MS11-9D-4_Implementation_Plan.md  MS11-9D-5_Implementation_Plan.md  MS11-9D_Implementation_Plan.md  MS11-9FIX1_Implementation_Plan.md  MS11-9FIX3_Implementation_Plan.md  MS11-9FIX6_Implementation_Plan.md  MS11-9FIX7_Implementation_Plan.md  MS11-9_Observation_Handoff_Contract_Memo.md  MS11-9_Remaining_Issues.md  MS11_MS12_Roadmap_and_Scope_Split.md  MS11_Remaining_Issues_and_Next_Milestones.md  MS12-3_Implementation_Plan.md  MS12-4_Implementation_Plan.md  MS12_Implementation_Roadmap.md  MS13-B1_Implementation_Plan.md  MS13-B2_Implementation_Plan.md  MS13-B3_Implementation_Plan.md  (+33 more)
(+97 files in other folders)
