[build-system]
requires = ["setuptools>=82.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mmd-autolip-tool"
version = "0.3.4.0"
description = "Desktop utility that generates MMD lip-motion VMD from UTF-8 text and PCM WAV."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PySide6==6.10.2",
  "matplotlib==3.10.8",
  "numpy==2.4.3",
  "openai-whisper==20250625",
  "pyopenjtalk==0.4.1",
]

[project.scripts]
mmd-autolip-tool = "main:main"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["main", "test_gui"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["core", "gui", "vmd_writer"]
